Archive2/63/bf8303e5adddfa/output
main.cpp: In function 'std::pair<double, double> to_pair_compile_check_ce2(std::initializer_list<const double>)':
main.cpp:18:47: error: 'init' is not a constant expression
     constexpr auto t = pair_compile_check(init); // <--- fails to compile
                                               ^
